[package]
name = "ldc3114"
version = "0.2.0"
edition = "2024"
description = "Driver crate for the TI LDC3114 inductance-to-digital converter"
repository = "https://github.com/andresovela/ldc3114-rs"
documentation = "https://docs.rs/ldc3114"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["inductance", "driver", "i2c"]
categories = ["embedded", "no-std"]
exclude = [".github"]

[dependencies]
defmt = { version = "1.0.0", optional = true }
embedded-hal = "1.0.0"
embedded-hal-async = { version = "1.0.0", optional = true }

[features]
async = ["dep:embedded-hal-async"]
defmt = ["dep:defmt"]
